fixed spelling error

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         function Game(props) {
             return (
                 <div className='Game'>
-                    <h1>Welome to {props.venue}</h1>
+                    <h1>Welcome to {props.venue}</h1>
                     <div className='stats'>
                         <Team teamName={props.visitingTeam.name}
                             teamLogo={props.visitingTeam.logoSrc}
@@ -155,17 +155,10 @@
         }
 
 
-
         ReactDOM.render(<App />, document.getElementById('root'))
 
 
     </script>
-
-
-
-
-
-
 
 </body>
 
