modified code for optional 'hard mode' points

--- a/index.html
+++ b/index.html
@@ -1,62 +1,29 @@
-<!DOCTYPE html>
-<html lang="en">
+<<!DOCTYPE html>
+    <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>React Basic Sports Game</title>
-    <link rel="stylesheet" href="style.css">
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>React Basic Sports Game</title>
+        <link rel="stylesheet" href="style.css">
+    </head>
 
-<body>
+    <body>
 
-    <div id='root'></div>
+        <div id='root'></div>
 
-    <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
-    <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
-    <script crossorigin src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
+        <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
+        <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
+        <script crossorigin src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
 
-    <script type='text/babel'>
+        <script type='text/babel'>
 
-        class Team extends React.Component {
-            constructor(props) {
-                super(props)
+            function Team(props) {
 
-                this.state = {
-                    shots: 0,
-                    score: 0,
-                }
-
-                this.shotSound = new Audio('./assets/audio/zapsplat_magic_wand_whoosh_burst_005_12550.mp3')
-                this.scoreSound = new Audio('./assets/audio/PrincessBrideSword.wav')
-            }
-
-
-
-            shotHandler = () => {
-                let score = this.state.score
-                this.shotSound.play()
-
-                if (Math.random() > 0.5) {
-                    score += 1
-
-                    setTimeout(() => {
-                        this.scoreSound.play()
-                    }, 300)
-                }
-
-                this.setState((state, props) => ({
-                    shots: state.shots + 1,
-                    score: score,
-                }))
-            }
-
-
-            render() {
                 let shotPercentageDiv
 
-                if (this.state.shots) {
-                    const shotPercentage = Math.round((this.state.score / this.state.shots) * 100)
+                if (props.stats.shots) {
+                    const shotPercentage = Math.round((props.stats.score / props.stats.shots) * 100)
                     shotPercentageDiv = (
                         <div>
                             <p>Shooting %:   {shotPercentage}</p>
@@ -66,100 +33,167 @@
 
                 return (
                     <div className='Team'>
-                        <h2>{this.props.teamName}</h2>
+                        <h2>{props.teamName}</h2>
 
                         <div className='logo'>
-                            <img src={this.props.teamLogo} alt='logo for {this.props.teamName}' />
+                            <img src={props.teamLogo} alt='logo for {props.teamName}' />
                         </div>
                         <br />
                         <div>
-                            <p>Shots:   {this.state.shots}</p>
+                            <p>Shots:   {props.stats.shots}</p>
                         </div>
 
                         <div>
-                            <p>Score:   {this.state.score}</p>
+                            <p>Score:   {props.stats.score}</p>
                         </div>
 
                         {shotPercentageDiv}
 
-                        <button className='shootButton' onClick={this.shotHandler}>Shoot!</button>
+                        <button className='shootButton' onClick={props.shotHandler}>Shoot!</button>
                     </div>
 
                 )
             }
 
-        }
 
-        function Game(props) {
-            return (
-                <div className='Game'>
-                    <h1>Welcome to {props.venue}</h1>
-                    <div className='stats'>
-                        <Team teamName={props.visitingTeam.name}
-                            teamLogo={props.visitingTeam.logoSrc}
-                        />
 
-                        <div className='versus'>
-                            <h1>VS</h1>
+            class Game extends React.Component {
+                constructor(props) {
+                    super(props)
+
+                    this.state = {
+                        resetCount: 0,
+                        homeTeamStats: {
+                            shots: 0,
+                            score: 0,
+                        },
+
+                        visitingTeamStats: {
+                            shots: 0,
+                            score: 0,
+                        },
+
+                    }
+
+                    this.shotSound = new Audio('./assets/audio/zapsplat_magic_wand_whoosh_burst_005_12550.mp3')
+                    this.scoreSound = new Audio('./assets/audio/PrincessBrideSword.wav')
+                }
+
+
+                shoot = (team) => {
+                    const teamStatsKey = `${team}TeamStats`
+                    let score = this.state[teamStatsKey].score
+                    this.shotSound.play()
+
+                    if (Math.random() > 0.5) {
+                        score += 1
+
+                        setTimeout(() => {
+                            this.scoreSound.play()
+                        }, 300)
+                    }
+
+                    this.setState((state, props) => ({
+                        [teamStatsKey]: {
+                            shots: state[teamStatsKey].shots + 1,
+                            score: score,
+                        }
+                    }))
+                }
+
+                resetGame = () => {
+                    this.setState((state, props) => ({
+                        resetCount: state.resetCount + 1,
+                        homeTeamStats: {
+                            shots: 0,
+                            score: 0,
+                        },
+                        visitingTeamStats: {
+                            shots: 0,
+                            score: 0,
+                        },
+                    }))
+                }
+
+
+                render() {
+                    return (
+                        <div className='Game'>
+                            <h1>Welcome to {this.props.venue}</h1>
+                            <div className='stats'>
+                                <Team teamName={this.props.visitingTeam.name}
+                                    teamLogo={this.props.visitingTeam.logoSrc}
+                                    stats={this.state.visitingTeamStats}
+                                    shotHandler={() => this.shoot('visiting')}
+                                />
+
+                                <div className='versus'>
+                                    <h1>VS</h1>
+                                    <div>
+                                        <p>Resets:   {this.state.resetCount}</p>
+                                        <button className='resetButton' onClick={this.resetGame}>Reset Game</button>
+                                    </div>
+                                </div>
+
+                                <Team teamName={this.props.homeTeam.name}
+                                    teamLogo={this.props.homeTeam.logoSrc}
+                                    stats={this.state.homeTeamStats}
+                                    shotHandler={() => this.shoot('home')}
+                                />
+                            </div>
                         </div>
+                    )
 
-                        <Team teamName={props.homeTeam.name}
-                            teamLogo={props.homeTeam.logoSrc}
+                }
+            }
+
+            function App(props) {
+                const leprechauns = {
+                    name: 'Dublin Leprechauns',
+                    logoSrc: './assets/images/LeprechaunPlayingBasketball400px.png',
+                }
+
+                const unicorns = {
+                    name: 'Indus Valley Unicorns',
+                    logoSrc: './assets/images/unicorn-basketball-player.png',
+
+                }
+
+                const dragons = {
+                    name: 'Valyria Dragons',
+                    logoSrc: './assets/images/dragon_playing_basketball.png',
+
+                }
+
+                const reapers = {
+                    name: 'Hanau Grim Reapers',
+                    logoSrc: './assets/images/grim_reaper_playing_basketball.png',
+
+                }
+
+                return (
+                    <div className='App'>
+                        <Game
+                            venue='The Crystal Ballroom'
+                            homeTeam={unicorns}
+                            visitingTeam={leprechauns}
+                        />
+                        <Game
+                            venue='Endtimes Arena'
+                            homeTeam={reapers}
+                            visitingTeam={dragons}
                         />
                     </div>
-                </div>
-            )
-
-
-        }
-
-        function App(props) {
-            const leprechauns = {
-                name: 'Dublin Leprechauns',
-                logoSrc: './assets/images/LeprechaunPlayingBasketball400px.png',
-            }
-
-            const unicorns = {
-                name: 'Indus Valley Unicorns',
-                logoSrc: './assets/images/unicorn-basketball-player.png',
+                )
 
             }
 
-            const dragons = {
-                name: 'Valyria Dragons',
-                logoSrc: './assets/images/dragon_playing_basketball.png',
 
-            }
-
-            const reapers = {
-                name: 'Hanau Grim Reapers',
-                logoSrc: './assets/images/grim_reaper_playing_basketball.png',
-
-            }
-
-            return (
-                <div className='App'>
-                    <Game
-                        venue='The Crystal Ballroom'
-                        homeTeam={unicorns}
-                        visitingTeam={leprechauns}
-                    />
-                    <Game
-                        venue='Endtimes Arena'
-                        homeTeam={reapers}
-                        visitingTeam={dragons}
-                    />
-                </div>
-            )
-
-        }
+            ReactDOM.render(<App />, document.getElementById('root'))
 
 
-        ReactDOM.render(<App />, document.getElementById('root'))
+        </script>
 
+    </body>
 
-    </script>
-
-</body>
-
-</html>
+    </html>
