added code for extra credit

--- a/index.html
+++ b/index.html
@@ -55,7 +55,23 @@
                 )
             }
 
+            function ScoreBoard(props) {
+                return (
+                    <div className='ScoreBoard'>
+                        <div className="teamStats">
+                            <h3>VISITORS</h3>
+                            <h3>{props.visitingTeamStats.score}</h3>
+                        </div>
 
+                        <h3>SCOREBOARD</h3>
+
+                        <div className="teamStats">
+                            <h3>HOME</h3>
+                            <h3>{props.homeTeamStats.score}</h3>
+                        </div>
+                    </div>
+                )
+            }
 
             class Game extends React.Component {
                 constructor(props) {
@@ -115,10 +131,13 @@
                     }))
                 }
 
-
                 render() {
                     return (
                         <div className='Game'>
+                            <ScoreBoard
+                                visitingTeamStats={this.state.visitingTeamStats}
+                                homeTeamStats={this.state.homeTeamStats}
+                            />
                             <h1>Welcome to {this.props.venue}</h1>
                             <div className='stats'>
                                 <Team teamName={this.props.visitingTeam.name}
@@ -185,12 +204,9 @@
                         />
                     </div>
                 )
-
             }
 
-
             ReactDOM.render(<App />, document.getElementById('root'))
-
 
         </script>
 
